# Robot-Teaching-Assiantant

./: .gitignore  CMakeLists.txt  README.md  config.yaml  core.py  q_font1.txt  requirements.txt  run.py  一_font1.txt
ATIDAQ/: CMakeLists.txt
InnfosCAN/: CMakeLists.txt  innfos_can_functions.cpp  innfos_can_functions.hpp
Model526/: model526.c  model526.h
apps/: CMakeLists.txt  calinfo.cpp  cyclic_task.c  cyclic_task.cpp
control/: GPR_main.py  angle_list.txt  angle_list_0.txt  angle_list_1.txt  angle_list_1_1.txt  angle_list_1_2.txt  angle_list_2.txt  angle_list_3.txt  angle_list_4.txt  chuan_demonstrated_angle_list.txt  ctl_main.py  ctl_utils.py  demonstrated_angle_list.txt  demonstrated_torque_list.txt  knova_ctl_main.py  main.py  move_target_angle_list.txt  move_target_torque_list.txt  plot_path.py  predict_main.py  preprocess_main.py  real_angle_list.txt  real_angle_vel_list.txt  real_torque_list.txt  ren_demonstrated_torque_list.txt  server_main.py  setup.py  torque_list.txt  word_GPR_main.py  yi_demonstrated_torque_list.txt
control/Model526/: model526.c  model526.h
control/data/: move_target_angle_list.txt  move_target_torque_list.txt
control/data/font_data/chuan/: angle_list_0.txt  angle_list_1.txt  angle_list_2.txt  (+6 more)
control/data/real_path_data/: angle_list_test.txt  chuan_demonstrated_torque_list.txt  curr_path_list.txt  demonstrated_angle_list.txt  demonstrated_torque_list.txt  move_target_torque_list.txt  ren_demonstrated_angle_list.txt  yi_demonstrated_angle_list.txt
control/forward_mode/: GMR01.py  GMR_based_GPR01.py  GMR_based_GPR_uncertainty_example01.py  GPR_coregionalization01.py  GPR_coregionalization_newObs01.py  README.md
control/motor_control/: CMakeLists.txt  README.md  main.cpp  robot_cal.cpp  robot_cal.hpp  sea_main.cpp  server_main.py  test_main.py
control/motor_control/GyemsCan/: gyems_can_functions.cpp  gyems_can_functions.h
control/motor_control/Model526/: CMakeLists.txt  model526.c
control/motor_control/RenishawCAN/: renishaw_can_functions.cpp  renishaw_can_functions.hpp
control/motor_control/SEAModel/: CMakeLists.txt
control/motor_control/apps/: _test_ctrl_SEA.cpp  _test_ctrl_imped.cpp  innfoscan_help.cpp
control/motor_control/robot_cal/: robot_cal.cpp  robot_cal.hpp
control/motor_control/src/: CMakeLists.txt  main.cpp
control/motor_control/test_gyems/: CMakeLists.txt  test.cpp
control/path_planning/: README.md  path_generate.py  plot_path.py  utils.py
control/protocol/: lab_connection.py  task_interface.py  tasks.py  tcp_protocol.py
control/utils/: preprocess_main.py  word_GPR_main.py  word_preprocess.py
control/vision_capture/: main_functions.py  main_writting_project.py
core/: controller.py  executor.py  imgprocessor.py  utils.py
gan/: test.py  train.py  utils.py
gan/datasets/: base_datasets.py  sequential_datasets.py
gan/model/: models.py
gan/models/: __init__.py  basegan.py  cyclegan.py  graphgan.py  stylecyclegan.py
gan/nn/: __init__.py  modules.py  stylegan2.py
main/: CMakeLists.txt  _test_scripts_zhimin.hpp
rtsetup/: CMakeLists.txt  rtsetup.c  rtsetup.h  rtutils.c  rtutils.h
tools/: __init__.py  evalutae.py  graphics2svg.py  img2traj.py  skeltonize.py  utils.py
utils/: font2img.py  img2traj.py  utils.py
utils/一 2/: 一_ink_pen_kai.ttf.txt  一_书体坊王学勤钢笔行书.ttf.txt  一_腾祥铚谦钢笔简.ttf.txt
(+104 files in other folders)
